--- a/web/opac/skin/default/js/carousel/me_carousel.css
+++ b/web/opac/skin/default/js/carousel/me_carousel.css
@@ -1,4 +1,3 @@
-
 .jcarousel-skin-meskin {
     text-align: center;
 }
@@ -33,7 +32,7 @@
     margin: 0;
 }
 .jcarousel-skin-meskin .jcarousel-item-placeholder {
-    background: url("/slider/skin/throbber.gif") no-repeat scroll center center #f0f2f5;
+    background: url("throbber.gif") no-repeat scroll center center #f0f2f5;
     color: #000;
     width: 96px;
 }
@@ -68,46 +67,9 @@
 
 .carousel_title{
 	font-size: 26pt;
-    margin-top: 25px;
+    margin-top: 50px;
     text-align: center;
 }
-/*
-html, body {
-    height: auto !important;
-    min-height: 100%;
-}
-body {
-    color: #333;
-    font-family: "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
-    font-size: 12px;
-    padding: 0;
-}
-body * {
-    line-height: 1.22em;
-}
-h1, h2, h3, h4, h5, h6 {
-    clear: both;
-    color: #4088b8;
-    font-family: Georgia,"Times New Roman",Times,serif;
-}
-h1 {
-}
-h2 {
-    color: #c8c8c8;
-    margin-top: -25px;
-}
-h3 {
-}
-h4 {
-    color: #333;
-    margin-bottom: -10px;
-}
-
-p {
-    clear: both;
-    margin: 10px 0;
-}
-*/
 .wrap ul,.wrap  ol {
     background: none repeat scroll 0 0 transparent;
 }
@@ -136,4 +98,3 @@ p {
 .wrap img {
     border: medium none;
 }
-
